--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,29 @@
 
     <style name="Theme.Schedule" parent="Theme.AppCompat.DayNight">
         <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryDark">@color/purple_700</item>
+        <item name="colorAccent">@color/teal_200</item>
+        <item name="android:textColorPrimary">@color/on_primary_text</item>
+        <item name="android:textColorSecondary">@color/on_secondary_text</item>
     </style>
+    <color name="on_primary_text">#FFFFFFFF</color>
+    <color name="on_secondary_text">#FF3A3A3A</color>
 
+    <!-- Цвета из colors.xml -->
+    <color name="purple_200">#7AFFC0</color>
+    <color name="purple_500">#FF5A8F7E</color>
+    <color name="purple_700">#FF5A8F7E</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#838181</color>
+
+    <!-- Специфические цвета для приложения -->
+    <color name="green_primary">#FF5A8F7E</color>
+    <color name="green_secondary">#FFB7F2D1</color>
+    <color name="background_white">#949494</color>
+    <color name="surface_gray">#646262</color>
+    <color name="on_background_text">#FF3A3A3A</color>
+    <color name="on_surface_text">#FF3A3A3A</color>
 
 </resources>
